--- a/#source/scss/style.scss
+++ b/#source/scss/style.scss
@@ -46,10 +46,10 @@
 		padding: 10px 30px;
 		cursor: pointer;
 		&:nth-child(odd) {
-			background-color: #f9f9f9;
+			//background-color: #f9f9f9;
 		}
 		&:nth-child(even) {
-			background-color: #eee;
+			//background-color: #eee;
 		}
 		&:hover {
 			background-color: #ddd;
