--- a/#source/scss/style.scss
+++ b/#source/scss/style.scss
@@ -70,4 +70,17 @@
 	background-color: #888;
 	color: #fff;
 	text-decoration: line-through;
+	&::before {
+		content: '';
+	    position: absolute;
+	    border-color: #fff;
+	    border-style: solid;
+	    border-width: 0 2px 2px 0;
+	    top: 5px;
+	    left: 12px;
+	    right: 10px;
+	    transform: rotate(45deg);
+	    height: 15px;
+	    width: 7px;
+	}
 }
