--- a/css/style.css
+++ b/css/style.css
@@ -124,3 +124,17 @@ h1, h2, h3, h4, h5, h6 {
   background-color: #888;
   color: #fff;
   text-decoration: line-through; }
+  .done::before {
+    content: '';
+    position: absolute;
+    border-color: #fff;
+    border-style: solid;
+    border-width: 0 2px 2px 0;
+    top: 5px;
+    left: 12px;
+    right: 10px;
+    -webkit-transform: rotate(45deg);
+    -ms-transform: rotate(45deg);
+    transform: rotate(45deg);
+    height: 15px;
+    width: 7px; }
